--- a/index.html
+++ b/index.html
@@ -281,7 +281,7 @@
                         <ul>
                             <li>
                                 Created and maintained 25 Amazon brands’ e-commerce data pipelines and dashboards using
-                                Python, data build tool, Snowflake,
+                                pandas, data build tool, Snowflake,
                                 Airflow, AWS, Docker, Kubernetes, and Tableau
                             </li>
                         </ul>
@@ -302,7 +302,7 @@
                         </div>
                         <ul>
                             <li>
-                                Preprocessed and analyzed 15000+ users’ anonymized health data (Pandas, Scikit-learn) to
+                                Preprocessed and analyzed 15000+ users’ anonymized health data (pandas, scikit-learn) to
                                 improve platform features and marketing performance
                             </li>
                             <li>
@@ -458,14 +458,14 @@
 
                         <h6 class="mt-3">Data Science & Big Data</h6>
                         <ul>
-                            <li>Pandas</li>
+                            <li>pandas</li>
                             <li>NumPy</li>
                             <li>Matplotlib</li>
                             <li>Apache Airflow</li>
                             <li>Apache Spark (Scala & PySpark)</li>
                             <li>Apache Hadoop</li>
                             <li>Seaborn</li>
-                            <li>Scikit-learn</li>
+                            <li>scikit-learn</li>
                             <li>Keras</li>
                             <li>Tableau</li>
                             <!-- <li>Apache HBase</li> -->
@@ -632,7 +632,7 @@
                             <li class="mb-2">
                                 <a href="https://github.com/gasci/simple-eda-titanic" target="_blank"
                                     class="text-danger">
-                                    <span class="fa-li"><i class="fas fa-code text-warning"></i></span>Pandas &#183;
+                                    <span class="fa-li"><i class="fas fa-code text-warning"></i></span>pandas &#183;
                                     Simple Exploratory Data
                                     Analysis of Determinants of Survival in the Wreck of the Titanic &nbsp;<i
                                         class="fas fa-link"></i>
