--- a/index.html
+++ b/index.html
@@ -797,6 +797,13 @@
                 <h6 class="mt-3">Online Courses</h6>
                 <ul class="fa-ul mb-0">
                     <li>
+                        <a href="https://www.udemy.com/certificate/UC-e079b45b-d3e6-480a-990d-a17d8b9c4a6e/" target="_blank"
+                            class="text-danger">
+                            <span class="fa-li"><i class="fas fa-certificate text-warning"></i></span> Udemy &#183;
+                            Apache Airflow: The Hands-On Guide&nbsp;<i class="fas fa-link"></i>
+                        </a>
+                    </li>
+                    <li>
                         <a href="https://www.sololearn.com/certificates/course/en/1874014/1068/landscape/png"
                             target="_blank" class="text-danger">
                             <span class="fa-li"><i class="fas fa-certificate text-warning"></i></span> SoloLearn &#183;
