--- a/index.html
+++ b/index.html
@@ -796,6 +796,15 @@
 
                 <h6 class="mt-3">Online Courses</h6>
                 <ul class="fa-ul mb-0">
+
+                    
+                    <li>
+                        <a href="https://www.udemy.com/certificate/UC-fc1efb5d-f68a-495d-8f0a-17cbfb9aca30/" target="_blank"
+                            class="text-danger">
+                            <span class="fa-li"><i class="fas fa-certificate text-warning"></i></span> Udemy &#183;
+                            Spark and Python for Big Data with PySpark&nbsp;<i class="fas fa-link"></i>
+                        </a>
+                    </li>
                     <li>
                         <a href="https://www.udemy.com/certificate/UC-e079b45b-d3e6-480a-990d-a17d8b9c4a6e/" target="_blank"
                             class="text-danger">
