--- a/index.html
+++ b/index.html
@@ -282,7 +282,7 @@
                             <li>
                                 Created and maintained 25 Amazon brands’ e-commerce data pipelines and dashboards using
                                 pandas, data build tool, Snowflake,
-                                Airflow, AWS, Docker, Kubernetes, and Tableau
+                                Airflow, PySpark, AWS, Docker, Kubernetes, and Tableau
                             </li>
                         </ul>
                     </div>
