--- a/index.html
+++ b/index.html
@@ -717,7 +717,7 @@
                                     <i class="fas fa-link"></i>
                                 </a>
                             </li>
-                            <li class="mb-2">
+                            <!-- <li class="mb-2">
                                 <a href="https://www.curiosmo.com/en/" target="_blank" class="text-danger">
                                     <span class="fa-li"><i class="fas fa-code text-warning"></i></span>Curiosmo &#183;
                                     Your personalized exam
@@ -725,7 +725,7 @@
                                     sessions.&nbsp;
                                     <i class="fas fa-link"></i>
                                 </a>
-                            </li>
+                            </li> -->
                         </ul>
                     </div>
                     <div class="tab-pane container active" id="StaticWeb">
