--- a/index.html
+++ b/index.html
@@ -9,7 +9,8 @@
     <meta name="apple-mobile-web-app-capable" content="yes">
     <meta name="apple-mobile-web-app-status-bar-style" content="black-translucent">
     <meta property="og:title" content="Göktuğ Aşcı, MD, MSc" />
-    <meta property="og:description" content="Data engineer and medical doctor who develops full-stack, cross-platform software" />
+    <meta property="og:description"
+        content="Data engineer and medical doctor who develops full-stack, cross-platform software" />
 
     <meta property="og:type" content="website" />
     <meta property="og:image" content="assets/img/profile.png" />
@@ -463,6 +464,8 @@
                             <li>Matplotlib</li>
                             <li>Apache Airflow</li>
                             <li>Apache Spark (Scala & PySpark)</li>
+                            <li>data build tool</li>
+                            <li>Snowflake</li>
                             <li>Apache Hadoop</li>
                             <li>Seaborn</li>
                             <li>scikit-learn</li>
@@ -700,13 +703,6 @@
                     <div class="tab-pane container active" id="MobileWebApp">
                         <ul class="fa-ul mb-0 mt-3">
                             <li class="mb-2">
-                                <a href="https://github.com/gasci/german/" target="_blank" class="text-danger">
-                                    <span class="fa-li"><i class="fas fa-code text-warning"></i></span>German Words&#183;
-                                    Try out my weekend project to practice German and NoSQL with Flask.&nbsp;
-                                    <i class="fas fa-link"></i>
-                                </a>
-                            </li>
-                            <li class="mb-2">
                                 <a href="https://www.mealdoc.com/en" target="_blank" class="text-danger">
                                     <span class="fa-li"><i class="fas fa-code text-warning"></i></span>Mealdoc &#183;
                                     Your personal diet assistant.
@@ -717,7 +713,7 @@
                                     <i class="fas fa-link"></i>
                                 </a>
                             </li>
-                            <!-- <li class="mb-2">
+                            <li class="mb-2">
                                 <a href="https://www.curiosmo.com/en/" target="_blank" class="text-danger">
                                     <span class="fa-li"><i class="fas fa-code text-warning"></i></span>Curiosmo &#183;
                                     Your personalized exam
@@ -725,10 +721,10 @@
                                     sessions.&nbsp;
                                     <i class="fas fa-link"></i>
                                 </a>
-                            </li> -->
+                            </li>
                         </ul>
                     </div>
-                    <div class="tab-pane container" id="StaticWeb">
+                    <div class="tab-pane container active" id="StaticWeb">
                         <ul class="fa-ul mb-0 mt-3">
                             <li class="mb-2">
                                 <a href="http://www.itfnoroloji.org/" target="_blank" class="text-danger">
@@ -804,17 +800,17 @@
                 <h6 class="mt-3">Online Courses</h6>
                 <ul class="fa-ul mb-0">
 
-                    
+
                     <li>
-                        <a href="https://www.udemy.com/certificate/UC-fc1efb5d-f68a-495d-8f0a-17cbfb9aca30/" target="_blank"
-                            class="text-danger">
+                        <a href="https://www.udemy.com/certificate/UC-fc1efb5d-f68a-495d-8f0a-17cbfb9aca30/"
+                            target="_blank" class="text-danger">
                             <span class="fa-li"><i class="fas fa-certificate text-warning"></i></span> Udemy &#183;
                             Spark and Python for Big Data with PySpark&nbsp;<i class="fas fa-link"></i>
                         </a>
                     </li>
                     <li>
-                        <a href="https://www.udemy.com/certificate/UC-e079b45b-d3e6-480a-990d-a17d8b9c4a6e/" target="_blank"
-                            class="text-danger">
+                        <a href="https://www.udemy.com/certificate/UC-e079b45b-d3e6-480a-990d-a17d8b9c4a6e/"
+                            target="_blank" class="text-danger">
                             <span class="fa-li"><i class="fas fa-certificate text-warning"></i></span> Udemy &#183;
                             Apache Airflow: The Hands-On Guide&nbsp;<i class="fas fa-link"></i>
                         </a>
