--- a/index.html
+++ b/index.html
@@ -464,8 +464,8 @@
                             <li>Matplotlib</li>
                             <li>Apache Airflow</li>
                             <li>Apache Spark (Scala & PySpark)</li>
-                            <li>data build tool</li>
                             <li>Snowflake</li>
+                            <li>data build tool (dbt)</li>
                             <li>Apache Hadoop</li>
                             <li>Seaborn</li>
                             <li>scikit-learn</li>
