--- a/index.html
+++ b/index.html
@@ -724,7 +724,7 @@
                             </li>
                         </ul>
                     </div>
-                    <div class="tab-pane container active" id="StaticWeb">
+                    <div class="tab-pane container" id="StaticWeb">
                         <ul class="fa-ul mb-0 mt-3">
                             <li class="mb-2">
                                 <a href="http://www.itfnoroloji.org/" target="_blank" class="text-danger">
