--- a/index.html
+++ b/index.html
@@ -704,8 +704,7 @@
                         <ul class="fa-ul mb-0 mt-3">
                             <li class="mb-2">
                                 <a href="https://github.com/gasci/german/" target="_blank" class="text-danger">
-                                    <span class="fa-li"><i class="fas fa-code text-warning"></i></span>German
-                                    Words&#183;
+                                    <span class="fa-li"><i class="fas fa-code text-warning"></i></span>German Words&#183;
                                     Try out my weekend project to practice German and NoSQL with Flask.&nbsp;
                                     <i class="fas fa-link"></i>
                                 </a>
