--- a/index.html
+++ b/index.html
@@ -285,6 +285,10 @@
                                 pandas, data build tool, Snowflake,
                                 Airflow, PySpark, AWS, Docker, Kubernetes, Grafana, and Tableau
                             </li>
+                            <li>
+                                Built a complete Airflow deployment that works on AWS and Docker, and maintained DAG
+                                pipelines to update the data on Snowflake
+                                to improve the decision making process for various stakeholders</li>
                         </ul>
                     </div>
                     <div class="flex-shrink-0 text-right">
@@ -464,8 +468,6 @@
                             <li>Matplotlib</li>
                             <li>Apache Airflow</li>
                             <li>Apache Spark (Scala & PySpark)</li>
-                            <li>Snowflake</li>
-                            <li>data build tool (dbt)</li>
                             <li>Apache Hadoop</li>
                             <li>Seaborn</li>
                             <li>scikit-learn</li>
@@ -704,7 +706,8 @@
                         <ul class="fa-ul mb-0 mt-3">
                             <li class="mb-2">
                                 <a href="https://github.com/gasci/german/" target="_blank" class="text-danger">
-                                    <span class="fa-li"><i class="fas fa-code text-warning"></i></span>German Words&#183;
+                                    <span class="fa-li"><i class="fas fa-code text-warning"></i></span>German
+                                    Words&#183;
                                     Try out my weekend project to practice German and NoSQL with Flask.&nbsp;
                                     <i class="fas fa-link"></i>
                                 </a>
@@ -743,6 +746,7 @@
                         </ul>
                     </div>
                 </div>
+
 
                 <h5 class="text-warning mt-4">Publications</h5>
                 <ul class="fa-ul mb-0">
