--- a/index.html
+++ b/index.html
@@ -286,7 +286,7 @@
                                 Airflow, PySpark, AWS, Docker, Kubernetes, Grafana, and Tableau
                             </li>
                             <li>
-                                Built a complete Airflow deployment that works on AWS and Docker, and maintained DAG
+                                Built a complete Airflow deployment that runs on AWS and Docker, and maintained DAG
                                 pipelines to update the data on Snowflake
                                 to improve the decision making process for various stakeholders</li>
                         </ul>
