--- a/index.html
+++ b/index.html
@@ -299,7 +299,7 @@
                 <div class="d-flex flex-column flex-md-row justify-content-between mb-5">
                     <div class="flex-grow-1">
                         <h4 class="mb-0">
-                            Co-Founder, Product Manager, Full-Stack Developer
+                            Co-Founder, Full-Stack Developer
                         </h4>
                         <div class="subheading mb-3">
                             <a href="http://mealdoc.com/" target="_blank" class="text-danger">Mealdoc:
