--- a/index.html
+++ b/index.html
@@ -281,9 +281,9 @@
                         </div>
                         <ul>
                             <li>
-                                Created and maintained 25 Amazon brands’ e-commerce data pipelines and dashboards using
+                                Created and maintained 26 Amazon brands’ e-commerce data pipelines and dashboards using
                                 pandas, data build tool, Snowflake,
-                                Airflow, PySpark, AWS, Docker, Kubernetes, Grafana, and Tableau
+                                Airflow, PySpark, Selenium, AWS, Docker, Kubernetes, Grafana, and Tableau
                             </li>
                             <li>
                                 Built a complete Airflow deployment that runs on AWS and Docker, and maintained DAG
@@ -299,7 +299,7 @@
                 <div class="d-flex flex-column flex-md-row justify-content-between mb-5">
                     <div class="flex-grow-1">
                         <h4 class="mb-0">
-                            Co-Founder, Full-Stack Developer
+                            Co-Founder, Product Manager, Full-Stack Developer
                         </h4>
                         <div class="subheading mb-3">
                             <a href="http://mealdoc.com/" target="_blank" class="text-danger">Mealdoc:
