--- a/index.html
+++ b/index.html
@@ -468,6 +468,7 @@
                             <li>Matplotlib</li>
                             <li>Apache Airflow</li>
                             <li>Apache Spark (Scala & PySpark)</li>
+                            <li>Apache Kafka (Python)</li>
                             <li>Apache Hadoop</li>
                             <li>Seaborn</li>
                             <li>scikit-learn</li>
