--- a/siir.html
+++ b/siir.html
@@ -137,7 +137,7 @@
                 </div>
             </div>
 
-            <div class="card shadow">
+            <!-- <div class="card shadow">
                 <div class="card-body">
                     <p class="card-title">BEYAZ</p>
                     <p class="card-text">
@@ -146,9 +146,9 @@
                         Sen güneşsiz bile parlarken bembeyaz<br>
                         Kış gibi görünüyorsun ama her yerin yaz.<br>
                     </p>
-                    <!-- <p class="card-text text-right">2021</p> -->
+                    <p class="card-text text-right">2021</p>
                 </div>
-            </div>
+            </div> -->
 
 
             <div class="card shadow">
