add kafka course

--- a/index.html
+++ b/index.html
@@ -810,7 +810,13 @@
 
                 <h6 class="mt-3">Online Courses</h6>
                 <ul class="fa-ul mb-0">
-
+                    <li>
+                        <a href="https://www.udemy.com/certificate/UC-17fa0ad4-ce3e-4b6b-bb11-da4319f8c204/" target="_blank"
+                            class="text-danger">
+                            <span class="fa-li"><i class="fas fa-certificate text-warning"></i></span> Udemy &#183;
+                            Apache Kafka - Real-time Stream Processing&nbsp;<i class="fas fa-link"></i>
+                        </a>
+                    </li>
 
                     <li>
                         <a href="https://www.udemy.com/certificate/UC-fc1efb5d-f68a-495d-8f0a-17cbfb9aca30/"
