--- a/index.html
+++ b/index.html
@@ -281,9 +281,9 @@
                         </div>
                         <ul>
                             <li>
-                                Created and maintained 30 Amazon brands’ e-commerce data pipelines and dashboards using
+                                Created and maintained 25+ Amazon brands’ e-commerce data pipelines and dashboards using
                                 pandas, data build tool, Snowflake,
-                                Airflow, PySpark, Selenium, AWS, Docker, Kubernetes, Grafana, and Tableau
+                                Airflow, PySpark, Selenium, AWS, Docker, Kubernetes, Grafana, Tableau, and Adobe XD
                             </li>
                             <li>
                                 Built a complete Airflow deployment that runs on AWS and Docker, and maintained DAG
