--- a/index.html
+++ b/index.html
@@ -371,7 +371,7 @@
                         <span class="text-primary">August 2019 - July 2020</span>
                     </div>
                 </div>
-                <!-- <div class="d-flex flex-column flex-md-row justify-content-between mb-5">
+                <div class="d-flex flex-column flex-md-row justify-content-between mb-5">
                     <div class="flex-grow-1">
                         <h4 class="mb-0">
                             Co-Founder, Product Manager, Front-End Developer
@@ -396,7 +396,7 @@
                         <span class="text-primary font-weight-bold">Istanbul, Turkey</span><br />
                         <span class="text-primary">November 2019 - October 2020</span>
                     </div>
-                </div> -->
+                </div>
                 <div class="d-flex flex-column flex-md-row justify-content-between mb-5">
                     <div class="flex-grow-1">
                         <h4 class="mb-0">Research Intern</h4>
