--- a/index.html
+++ b/index.html
@@ -382,6 +382,10 @@
                         </div>
                         <ul>
                             <li>
+                                Created the business model and after succeeding at TÜSİAD's Bu Gençlikte İş Var
+                                incubator program our team earned the mentorship of Eczacıbaşı family
+                            </li>
+                            <li>
                                 Led a team of 25+ medical educators generating 9000+ questions and helping 600000+
                                 medical cases be studied, improving online medical education quality in Turkey
                             </li>
@@ -811,8 +815,8 @@
                 <h6 class="mt-3">Online Courses</h6>
                 <ul class="fa-ul mb-0">
                     <li>
-                        <a href="https://www.udemy.com/certificate/UC-17fa0ad4-ce3e-4b6b-bb11-da4319f8c204/" target="_blank"
-                            class="text-danger">
+                        <a href="https://www.udemy.com/certificate/UC-17fa0ad4-ce3e-4b6b-bb11-da4319f8c204/"
+                            target="_blank" class="text-danger">
                             <span class="fa-li"><i class="fas fa-certificate text-warning"></i></span> Udemy &#183;
                             Apache Kafka - Real-time Stream Processing&nbsp;<i class="fas fa-link"></i>
                         </a>
