--- a/index.html
+++ b/index.html
@@ -377,13 +377,13 @@
                             Co-Founder, Product Manager, Front-End Developer
                         </h4>
                         <div class="subheading mb-3">
-                            <a href="https://www.curiosmo.com/" target="_blank" class="text-danger">Curiosmo: Personal
-                                Exam Assistant&nbsp;<i class="fas fa-link"></i></a>
+                            <a class="text-danger">Curiosmo: Personal
+                                Exam Assistant</a>
                         </div>
                         <ul>
                             <li>
                                 Created the business model and after succeeding at TÜSİAD's Bu Gençlikte İş Var
-                                incubator program our team earned the mentorship of Eczacıbaşı family
+                                incubator program, our team earned the mentorship of Eczacıbaşı family
                             </li>
                             <li>
                                 Led a team of 25+ medical educators generating 9000+ questions and helping 600000+
