--- a/index.html
+++ b/index.html
@@ -500,6 +500,7 @@
                         <h6>Front-End Development</h6>
                         <ul>
                             <li>JavaScript</li>
+                            <li>TypeScript</li>
                             <li>Apache Cordova</li>
                             <li>Electron</li>
                             <li>Vue.js</li>
