--- a/index.html
+++ b/index.html
@@ -383,7 +383,7 @@
                         <ul>
                             <li>
                                 Created the business model and after succeeding at TÜSİAD's Bu Gençlikte İş Var
-                                incubator program, our team earned the mentorship of Eczacıbaşı family
+                                incubator program, our team earned the mentorship of Eczacıbaşı Holding
                             </li>
                             <li>
                                 Led a team of 25+ medical educators generating 9000+ questions and helping 600000+
