--- a/index.html
+++ b/index.html
@@ -311,7 +311,7 @@
                                 improve platform features and marketing performance
                             </li>
                             <li>
-                                Designed and coded all front-end (Buefy.js, Vu5.js, Apache Cordova) and back-end (AWS
+                                Designed and coded all front-end (Buefy.js, Vue.js, Apache Cordova) and back-end (AWS
                                 RDS, AWS S3, Heroku, Django, Django Rest Framework) features using cross-platform
                                 software allowing development and maintenance on one codebase for web, iOS, and Android
                                 applications
