--- a/index.html
+++ b/index.html
@@ -336,7 +336,7 @@
                         </div>
                         <ul>
                             <li>
-                                Created Crunchbase e-mail automations and developed web scraping scripts enabling
+                                Created Crunchbase e-mail automation and developed web scraping scripts enabling the 
                                 origination of 100+ companies in a few minutes
                             </li>
                             <li>
