--- a/index.html
+++ b/index.html
@@ -281,9 +281,8 @@
                         </div>
                         <ul>
                             <li>
-                                Created and maintained 25+ Amazon brands’ e-commerce data pipelines and dashboards using
-                                pandas, data build tool, Snowflake,
-                                Airflow, PySpark, Selenium, AWS, Docker, Kubernetes, Grafana, Tableau, and Adobe XD
+                                Created and maintained data pipelines and dashboards of 25+ Amazon brands that generated 150+ M dollars of revenue in
+                                2021 using pandas, Snowflake, Airflow, PySpark, data build tool, Selenium, AWS, Docker, and Tableau
                             </li>
                             <li>
                                 Built a complete Airflow deployment that runs on AWS and Docker, and maintained DAG
