update awards & certs

--- a/index.html
+++ b/index.html
@@ -281,8 +281,10 @@
                         </div>
                         <ul>
                             <li>
-                                Created and maintained data pipelines and dashboards of 25+ Amazon brands that generated 150+ M dollars of revenue in
-                                2021 using pandas, Snowflake, Airflow, PySpark, data build tool, Selenium, AWS, Docker, and Tableau
+                                Created and maintained data pipelines and dashboards of 25+ Amazon brands that generated
+                                150+ M dollars of revenue in
+                                2021 using pandas, Snowflake, Airflow, PySpark, data build tool, Selenium, AWS, Docker,
+                                and Tableau
                             </li>
                             <li>
                                 Built a complete Airflow deployment that runs on AWS and Docker, and maintained DAG
@@ -335,7 +337,7 @@
                         </div>
                         <ul>
                             <li>
-                                Created Crunchbase e-mail automation and developed web scraping scripts enabling the 
+                                Created Crunchbase e-mail automation and developed web scraping scripts enabling the
                                 origination of 100+ companies in a few minutes
                             </li>
                             <li>
@@ -787,6 +789,14 @@
                 <h6 class="mt-3">Certifications</h6>
                 <ul class="fa-ul mb-0">
                     <li>
+                        <a href="https://www.credly.com/badges/a76db082-7fa5-4062-afdc-c6ecc6b890f3/public_url"
+                            target="_blank" class="text-danger">
+                            <span class="fa-li"><i class="fas fa-certificate text-warning"></i></span> Amazon Web
+                            Services
+                            &#183; AWS Certified Cloud Practitioner&nbsp;<i class="fas fa-link"></i>
+                        </a>
+                    </li>
+                    <li>
                         <a href="assets/pdf/NOVA_mem_cert.pdf" target="_blank" class="text-danger">
                             <span class="fa-li"><i class="fas fa-certificate text-warning"></i></span> Nova Talent
                             &#183; Membership Certificate&nbsp;<i class="fas fa-link"></i>
@@ -804,12 +814,12 @@
                             <i class="fas fa-link"></i>
                         </a>
                     </li> -->
-                    <li>
+                    <!-- <li>
                         <a href="assets/img/IFMSA_exch.png" target="_blank" class="text-danger">
                             <span class="fa-li"><i class="fas fa-certificate text-warning"></i></span> IFMSA &#183;
                             Molecular Medicine Techniques Used in Medical Laboratories&nbsp;<i class="fas fa-link"></i>
                         </a>
-                    </li>
+                    </li> -->
                 </ul>
 
                 <h6 class="mt-3">Online Courses</h6>
@@ -834,13 +844,6 @@
                             target="_blank" class="text-danger">
                             <span class="fa-li"><i class="fas fa-certificate text-warning"></i></span> Udemy &#183;
                             Apache Airflow: The Hands-On Guide&nbsp;<i class="fas fa-link"></i>
-                        </a>
-                    </li>
-                    <li>
-                        <a href="https://www.sololearn.com/certificates/course/en/1874014/1068/landscape/png"
-                            target="_blank" class="text-danger">
-                            <span class="fa-li"><i class="fas fa-certificate text-warning"></i></span> SoloLearn &#183;
-                            Java&nbsp;<i class="fas fa-link"></i>
                         </a>
                     </li>
                     <li>
@@ -884,20 +887,7 @@
                             Supervised Learning with Scikit-learn&nbsp;<i class="fas fa-link"></i>
                         </a>
                     </li>
-                    <li>
-                        <a href="https://www.sololearn.com/Certificate/1094-1874014/jpg/" target="_blank"
-                            class="text-danger">
-                            <span class="fa-li"><i class="fas fa-certificate text-warning"></i></span> SoloLearn &#183;
-                            Machine Learning&nbsp;<i class="fas fa-link"></i>
-                        </a>
-                    </li>
-                    <li>
-                        <a href="https://www.sololearn.com/Certificate/1093-1874014/jpg/" target="_blank"
-                            class="text-danger">
-                            <span class="fa-li"><i class="fas fa-certificate text-warning"></i></span> SoloLearn &#183;
-                            Data Science with Python&nbsp;<i class="fas fa-link"></i>
-                        </a>
-                    </li>
+                    
                     <li>
                         <a href="https://www.udemy.com/certificate/UC-3X4NQN1M/" target="_blank" class="text-danger">
                             <span class="fa-li"><i class="fas fa-certificate text-warning"></i></span> Udemy &#183; MBA
@@ -914,6 +904,25 @@
                         <a href="https://www.udemy.com/certificate/UC-TGR2ZBON/" target="_blank" class="text-danger">
                             <span class="fa-li"><i class="fas fa-certificate text-warning"></i></span> Udemy &#183; The
                             Ultimate Beginner's Guide to Django&nbsp;<i class="fas fa-link"></i>
+                        </a>
+                    </li>
+                    <li>
+                        <a href="https://www.sololearn.com/Certificate/1094-1874014/jpg/" target="_blank" class="text-danger">
+                            <span class="fa-li"><i class="fas fa-certificate text-warning"></i></span> SoloLearn &#183;
+                            Machine Learning&nbsp;<i class="fas fa-link"></i>
+                        </a>
+                    </li>
+                    <li>
+                        <a href="https://www.sololearn.com/Certificate/1093-1874014/jpg/" target="_blank" class="text-danger">
+                            <span class="fa-li"><i class="fas fa-certificate text-warning"></i></span> SoloLearn &#183;
+                            Data Science with Python&nbsp;<i class="fas fa-link"></i>
+                        </a>
+                    </li>
+                    <li>
+                        <a href="https://www.sololearn.com/certificates/course/en/1874014/1068/landscape/png" target="_blank"
+                            class="text-danger">
+                            <span class="fa-li"><i class="fas fa-certificate text-warning"></i></span> SoloLearn &#183;
+                            Java&nbsp;<i class="fas fa-link"></i>
                         </a>
                     </li>
                     <li>
@@ -986,18 +995,6 @@
                                 target="_blank">Oral
                                 Presentation&nbsp;<i class="fas fa-link"></i></a>
                         </div>
-                    </li>
-                    <li>
-                        <a href="siir.html" target="_blank" class="text-danger">
-                            <span class="fa-li"><i class="fas fa-trophy text-warning"></i></span> VII. Enka Yazadurmak
-                            Poetry Competition 2th Place, "Cümle"&nbsp;<i class="fas fa-link"></i>
-                        </a>
-                    </li>
-                    <li>
-                        <a href="siir.html" target="_blank" class="text-danger">
-                            <span class="fa-li"><i class="fas fa-trophy text-warning"></i></span> VI. Enka Yazadurmak
-                            Poetry Competition 2th Place, "Kağıt Kesiği"&nbsp;<i class="fas fa-link"></i>
-                        </a>
                     </li>
                 </ul>
 
@@ -1152,6 +1149,21 @@
                     of my free time exploring the latest technology advancements in the health
                     care world.
                 </p>
+                <h6 class="mt-3">Awards</h6>
+                <ul>
+                    <li>
+                        <a href="siir.html" target="_blank" class="text-danger">
+                            <span class="fa-li"><i class="fas fa-trophy text-warning"></i></span> VII. Enka Yazadurmak
+                            Poetry Competition 2th Place, "Cümle"&nbsp;<i class="fas fa-link"></i>
+                        </a>
+                    </li>
+                    <li>
+                        <a href="siir.html" target="_blank" class="text-danger">
+                            <span class="fa-li"><i class="fas fa-trophy text-warning"></i></span> VI. Enka Yazadurmak
+                            Poetry Competition 2th Place, "Kağıt Kesiği"&nbsp;<i class="fas fa-link"></i>
+                        </a>
+                    </li>
+                </ul>
                 <div class="mt-4">
                     <i class="fas fa-3x fa-running social"></i>&nbsp;&#183;&nbsp;<i
                         class="fas fa-3x fa-table-tennis social"></i>&nbsp;&#183;&nbsp;<i
