--- a/index.html
+++ b/index.html
@@ -281,7 +281,7 @@
                         </div>
                         <ul>
                             <li>
-                                Created and maintained data pipelines and dashboards of 40+ Amazon brands that generated
+                                Created and maintained ETL and ELT pipelines and dashboards of 40+ Amazon brands that generated
                                 250+ M dollars of revenue in
                                 2021 using pandas, Snowflake, Airflow, PySpark, data build tool, Selenium, AWS, Docker,
                                 and Tableau
