--- a/index.html
+++ b/index.html
@@ -289,7 +289,11 @@
                             <li>
                                 Built a complete Airflow deployment that runs on AWS and Docker, and maintained DAG
                                 pipelines to update the data on Snowflake
-                                to improve the decision making process for various stakeholders</li>
+                                to improve the decision making process for various stakeholders
+                            </li>
+                            <li>
+                                Built a complete Python repository from scratch for ETL/ELT jobs and REST API connections
+                            </li>
                         </ul>
                     </div>
                     <div class="flex-shrink-0 text-right">
