--- a/index.html
+++ b/index.html
@@ -292,7 +292,7 @@
                                 to improve the decision making process for various stakeholders
                             </li>
                             <li>
-                                Built a complete Python repository from scratch for ETL/ELT jobs and REST API connections
+                                Built a complete Python repository with the best software development practices for ETL/ELT jobs and REST API communication
                             </li>
                         </ul>
                     </div>
