--- a/index.html
+++ b/index.html
@@ -292,7 +292,7 @@
                                 to improve the decision making process for various stakeholders
                             </li>
                             <li>
-                                Built a complete Python repository with the best software development practices for ETL/ELT jobs and REST API communication
+                                Built a complete Python repository for ETL/ELT jobs and REST API communication with the best software development practices
                             </li>
                         </ul>
                     </div>
