--- a/index.html
+++ b/index.html
@@ -288,7 +288,7 @@
                             </li>
                             <li>
                                 Built a complete Airflow deployment that runs on AWS and Docker, and maintained DAG
-                                pipelines to update the data on Snowflake
+                                pipelines to orchestrate Snowflake data pipelines
                                 to improve the decision making process for various stakeholders
                             </li>
                             <li>
