--- a/index.html
+++ b/index.html
@@ -289,7 +289,7 @@
                             <li>
                                 Built a complete Airflow deployment that runs on AWS and Docker, and maintained DAG
                                 pipelines to orchestrate Snowflake data pipelines
-                                to improve the decision making process for various stakeholders
+                                to improve the decision making process
                             </li>
                             <li>
                                 Built a complete Python repository for ETL/ELT jobs and REST API communication with the best software development practices
