add Azure Databricks course

--- a/index.html
+++ b/index.html
@@ -829,6 +829,14 @@
                 <h6 class="mt-3">Online Courses</h6>
                 <ul class="fa-ul mb-0">
                     <li>
+                        <a href="https://www.udemy.com/certificate/UC-1048bee0-bdc6-4e7f-b265-48e71d2ed42d/" target="_blank"
+                            class="text-danger">
+                            <span class="fa-li"><i class="fas fa-certificate text-warning"></i></span> Udemy &#183;
+                            Azure Databricks & Spark Core For Data Engineers (Python/SQL)&nbsp;<i class="fas fa-link"></i>
+                        </a>
+                    </li>
+
+                    <li>
                         <a href="https://www.udemy.com/certificate/UC-17fa0ad4-ce3e-4b6b-bb11-da4319f8c204/"
                             target="_blank" class="text-danger">
                             <span class="fa-li"><i class="fas fa-certificate text-warning"></i></span> Udemy &#183;
